--- a/libft/Makefile
+++ b/libft/Makefile
@@ -6,7 +6,7 @@
 #    By: alde-abr <alde-abr@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/11/11 15:16:24 by alde-abr          #+#    #+#              #
-#    Updated: 2025/03/06 13:10:07 by alde-abr         ###   ########.fr        #
+#    Updated: 2025/04/07 17:41:12 by alde-abr         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -29,7 +29,7 @@ SRC = \
 	ft_putbits.c ft_strrnchr.c ft_intcomp.c ft_strlowcase.c \
 	ft_strupcase.c ft_digitcount.c ft_putnbr.c ft_atoi_base.c \
 	ft_digitcount_base.c ft_strupcase.c ft_abs.c ft_get_next_line.c \
-	ft_strcmp.c \
+	ft_strcmp.c ft_sign.c \
 	\
 	$(SB_S)/ft_string_builder.c $(SB_S)/ft_string_builder_utils.c \
 	\
